<resources>


    <string name="app_name" translatable="false">Hestia</string>
    <string name="title_recipe">Recipes</string>
    <string name="add_recipe">Add recipe</string>
    <string name="settings">Settings</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="New_Here">New Here ?</string>
    <string name="Create_Account">Create Account</string>
    <string name="Already_Have_an_Account">"Already Have an Account ?</string>
    <string name="Confirm_Password">Confirm Password</string>

    <string name="theme">Theme</string>
    <string name="about">About</string>



    <string name="MapView">Map View</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="about_us">About Us</string>
    <string name="github_vasilis">GitHub(Vasilis)</string>
    <string name="github_johnjohn">GitHub(John)</string>
    <string name="about_the_app">About the App</string>
    <string name="version">Version</string>
    <string name="_1_0_0" translatable="false">1.0.0</string>
    <string name="your_primary_food_app">Your Primary Food App</string>
    <string name="pick_date">Pick Date</string>
    <string name="date">Date</string>
    <string name="my_alarm">My Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="search">Search!</string>
    <string name="write_todo_here">Write todo here!</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="difficulty_easy_medium_hard">Difficulty (easy, medium, hard)</string>
    <string name="select_image">Select Image</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="alarm_set">Alarm Set</string>
    <string name="calendar">Calendar</string>
    <string name="to_do_list">To Do List</string>
    <string name="title">Title</string>
    <string name="difficulty">Difficulty</string>
    <string name="extras">Extras</string>
    <string name="add">add</string>
    <string name="view">view</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="system_default">System Default</string>

</resources>
