<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hestia.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_Start"
        android:layout_marginEnd="@dimen/margin_End"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/sign_in"
            android:textColor="?attr/text_color"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/layout_margin_Top"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:padding="@dimen/padding"
                android:drawablePadding="@dimen/drawablePadding"
                android:textColor="?attr/text_color"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_Top_20"
            app:passwordToggleContentDescription="password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawablePadding"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:padding="@dimen/padding"
                android:textColor="?attr/text_color" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="@dimen/layout_margin_Top"
            android:text="@string/login"
            android:textColor="?attr/text_color"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:id="@+id/llNewUser"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin_Top"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/New_Here" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Create_Account"
                android:textColor="?attr/text_color"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>